tests/evaluator/should_pass/prioritise_po.csp
external prioritisepo

channel a, b, c

procTest1 = prioritisepo(STOP, {a, b, c}, {(a, b), (b, c)}, {a})
