tests/evaluator/should_fail/prioritisepo_2.csp
external prioritisepo

channel a, b

procTest1 = prioritisepo(STOP, {(a, b)}, {b})
assert procTest1 :[deadlock free [F]]
